--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=upgrade-app
-sonar.exclusions=**/*.java, **/*.py
+sonar.exclusions=**/*.java, **/*.py, **/*.js, **/*.spec.ts, backend/packages/Upgrade/test/**
 
