--- a/clientlibs/libTesters/client-lib-tester-frontend/package.json
+++ b/clientlibs/libTesters/client-lib-tester-frontend/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "ng": "ng",
     "postinstall": "npm run copy-local-js-build",
-    "start": "ng serve --port 4201",
-    "start:install": "npm install && npm run start",
+    "start": "npm install && ng serve --port 4201",
     "start:ts": "concurrently \"npm run start:install\" \"(cd ../ts-lib-tester-backend-server && npm run start:build)\"",
     "copy-local-js-build": "mkdir -p node_modules/upgrade_client_local && cd ../../js/ && npm install && npm run build && cp -r ./{dist,package.json,README.md} ../libTesters/client-lib-tester-frontend/node_modules/upgrade_client_local",
     "watch": "ng build --watch --configuration development",
