--- a/clientlibs/libTesters/client-lib-tester-frontend/package.json
+++ b/clientlibs/libTesters/client-lib-tester-frontend/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/webpack": "^5.28.1",
     "concurrently": "^8.2.0",
     "typescript": "~4.7.2"
   }
