--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.3.0-alpine
+FROM node:18-alpine
 
 ENV NEW_RELIC_NO_CONFIG_FILE=true
 ENV NR_NATIVE_METRICS_NO_BUILD=true
@@ -8,7 +8,7 @@ WORKDIR /usr/src/app
 
 # Install app dependencies
 COPY . .
-RUN cd packages/Upgrade && npm ci
+RUN cd packages/Upgrade && npm ci --legacy-peer-deps
 ENV NODE_OPTIONS=--max_old_space_size=4096
 RUN ["npm", "run", "build:upgrade"]
 
