--- a/.github/actions/generic-npm-build/action.yml
+++ b/.github/actions/generic-npm-build/action.yml
@@ -12,13 +12,17 @@ inputs:
     description: Version to set in package.json
     required: false
     default: ""
+  node_version:
+    description: Version of nodejs to build with
+    required: false
+    default: 18
 runs:
   using: composite
   steps:
     - uses: tw3lveparsecs/github-actions-setvars@v0.1
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: ${{ inputs.node_version }}
         check-latest: true
     - name: Set Version
       shell: bash
