--- a/clientlibs/js/tsconfig.json
+++ b/clientlibs/js/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "outDir": "./dist",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "strict": true,
     "alwaysStrict": true,
@@ -24,6 +24,6 @@
   "include": [
     "src",
     ".eslintrc.js",
-    "webpack.config.js"
+    "webpack.config.ts"
   ]
 }
