--- a/clientlibs/js/package.json
+++ b/clientlibs/js/package.json
@@ -7,7 +7,11 @@
   ],
   "scripts": {
     "build:bundler": "webpack",
-    "build:types": "./node_modules/.bin/dts-bundle-generator -o dist/browser/index.d.ts src/index.ts && ./node_modules/.bin/dts-bundle-generator -o dist/node/index.d.ts src/index.ts && ./node_modules/.bin/dts-bundle-generator -o dist/browser-lite/index.d.ts src/index.ts && ./node_modules/.bin/dts-bundle-generator -o dist/node-lite/index.d.ts src/index.ts",
+    "build:types": "concurrently \"npm run build:types-browser\" \"npm run build:types-node\" \"npm run build:types-browser-lite\" \"npm run build:types-node-lite\"",
+    "build:types-browser": "./node_modules/.bin/dts-bundle-generator -o dist/browser/index.d.ts src/index.ts",
+    "build:types-node": "./node_modules/.bin/dts-bundle-generator -o dist/node/index.d.ts src/index.ts",
+    "build:types-browser-lite": "./node_modules/.bin/dts-bundle-generator -o dist/browser-lite/index.d.ts src/index.ts",
+    "build:types-node-lite": "./node_modules/.bin/dts-bundle-generator -o dist/node-lite/index.d.ts src/index.ts",
     "build": "npm run clean && npm run build:bundler && npm run build:types",
     "build:watch": "tsc -w",
     "clean": "rm -rf dist",
@@ -26,6 +30,7 @@
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@types/uuid": "^9.0.1",
+    "concurrently": "^8.2.1",
     "dts-bundle-generator": "^8.0.1",
     "eslint-plugin-tsdoc": "^0.2.17",
     "jest": "^29.2.2",
