--- a/clientlibs/js/tsconfig.json
+++ b/clientlibs/js/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "importHelpers": true,
     "module": "commonjs",
     "target": "es6",
