--- a/clientlibs/js/tsconfig.json
+++ b/clientlibs/js/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "outDir": "./dist",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "strict": true,
     "alwaysStrict": true,
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "importHelpers": true,
     "module": "commonjs",
     "target": "es6",
@@ -24,6 +25,6 @@
   "include": [
     "src",
     ".eslintrc.js",
-    "webpack.config.js"
+    "webpack.config.ts"
   ]
 }
