completed all stratification controller and service

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     },
     "license": "ISC",
     "dependencies": {
+        "json2csv": "^6.0.0-alpha.2",
         "jsonfile": "^6.0.1"
     },
     "devDependencies": {
