--- a/clientlibs/java/pom.xml
+++ b/clientlibs/java/pom.xml
@@ -9,9 +9,9 @@
 		at the same time that happen to rev to the same new version will be caught 
 		by a merge conflict. -->
 
-  <!-- 5.0.11 -> 5.0.12: Hotfix caching getValidExperiments and query performance improvements -->
+  <!-- 5.0.12 -> 5.0.13: no retries for 4xx, retry other errors once instead of 3 times -->
 
-	<version>5.0.12</version>
+	<version>5.0.13</version>
 	<build>
 		<plugins>
 			<plugin>
