--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "dayjs": "^1.11.10",
-        "jsonfile": "^6.0.1",
-        "papaparse": "^5.4.1"
+        "jsonfile": "^6.0.1"
     },
     "devDependencies": {
         "ts-node": "^8.6.2",
