--- a/backend/packages/Upgrade/.env.test
+++ b/backend/packages/Upgrade/.env.test
@@ -1,4 +1,5 @@
-#
+# Please update this file with Valid Values. 
+# Avoid passwords in plain text.  Use Parameter Store, Vault etc.
 # APPLICATION
 #
 APP_NAME=A/B Testing Backend
@@ -57,7 +58,7 @@ SWAGGER_JSON=/swagger.json
 MONITOR_ENABLED=true
 MONITOR_ROUTE=/monitor
 MONITOR_USERNAME=admin
-MONITOR_PASSWORD=1234
+MONITOR_PASSWORD=<replaceme>
 
 #
 # Google Client Id
@@ -67,21 +68,21 @@ DOMAIN_NAME =
 AUTH_CHECK=false
 SCHEDULER_STEP_FUNCTION=arn:aws:states:us-east-1:781188149671:stateMachine:development-upgrade-experiment-scheduler
 # SCHEDULER_STEP_FUNCTION=arn:aws:states:us-east-1:781188149671:stateMachine:staging-upgrade-experiment-scheduler
-AWS_REGION=us-east-1
+AWS_REGION=<anyAWSregion>
 HOST_URL = https://upgrade-dev-backend.edoptimize.com/api
-TOKEN_SECRET_KEY = carnegielearning
+TOKEN_SECRET_KEY = <replaceme>
 
 #
 # Email
 #
-EMAIL_FROM                      = "dev@playpowerlabs.com",
+EMAIL_FROM                      = "Name@companyemail.com",
 EMAIL_EXPIRE_AFTER_SECONDS      = 36000
 EMAIL_BUCKET                    = "upgrade-csv-upload"
 
 #
 # Initialization
 #
-ADMIN_USERS = mglover@carnegielearning.com:admin/\sritter@carnegielearning.com:admin/\sfancsali@carnegielearning.com:admin/\nirmal@playpowerlabs.com:admin/\vivek@playpowerlabs.com:admin/\mmchenry@carnegielearning.com:admin/\apople@carnegielearning.com:admin/\leslie@carnegielearning.com:admin/\sgrieco@carnegielearning.com:admin/\lseaman@carnegielearning.com:admin/\kschaefer@carnegielearning.com:admin/\abright@carnegielearning.com:admin/\amurphy@carnegielearning.com:admin/\derek@playpowerlabs.com:admin/\jaydip.hirapara@playpowerlabs.com:admin/\pratik.prajapati@playpowerlabs.com:admin/\dev@playpowerlabs.com:admin/\dhrushit@playpowerlabs.com:admin/\ridham.shah@playpowerlabs.com:admin/\zlee@carnegielearning.com:admin/\kweldon@carnegielearning.com:admin
+ADMIN_USERS = username@companyname:admin/\user2@companyname.com:admin
 CLIENT_API_SECRET = secret
 CLIENT_API_KEY = key
 
