--- a/package.json
+++ b/package.json
@@ -55,8 +55,5 @@
   "bugs": {
     "url": "https://github.com/CarnegieLearningWeb/UpGrade/issues"
   },
-  "homepage": "https://github.com/CarnegieLearningWeb/UpGrade#readme",
-  "dependencies": {
-    "papaparse": "^5.4.1"
-  }
+  "homepage": "https://github.com/CarnegieLearningWeb/UpGrade#readme"
 }
