--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -29,8 +29,6 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/babel__core": "^7.1.18",
-        "@types/babel__traverse": "^7.14.2",
         "@types/body-parser": "^1.17.1",
         "@types/cache-manager": "^4.0.1",
         "@types/compression": "^1.0.1",
@@ -119,6 +117,7 @@
     },
     "overrides": {
         "class-validator": "$class-validator",
-        "typeorm": "$typeorm"
+        "typeorm": "$typeorm",
+        "@types/babel__traverse": "7.0.6"
     }
 }
