--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -67,6 +67,7 @@
         "aws-sdk": "^2.639.0",
         "body-parser": "^1.20.1",
         "cache-manager": "^4.1.0",
+        "cache-manager-ioredis-yet": "^1.2.2",
         "chalk": "^2.4.2",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.14.0",
