--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -96,6 +96,7 @@
         "nodemon": "^2.0.20",
         "npm": "^8.5.1",
         "objects-to-csv": "^1.3.6",
+        "papaparse": "^5.4.1",
         "pg": "^8.3.0",
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.9.0",
