--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -12,6 +12,7 @@
     "module": "commonjs",
     "target": "es2015",
     "typeRoots": ["./node_modules/@types"],
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "composite": true
   }
 }
