--- a/clientlibs/java/pom.xml
+++ b/clientlibs/java/pom.xml
@@ -9,9 +9,9 @@
 		at the same time that happen to rev to the same new version will be caught 
 		by a merge conflict. -->
 
-  <!-- 5.0.10 -> 5.0.11: 1080 temporarily hide error tab -->
+  <!-- 5.0.11 -> 5.0.12: Hotfix caching getValidExperiments and query performance improvements -->
 
-	<version>5.0.11</version>
+	<version>5.0.12</version>
 	<build>
 		<plugins>
 			<plugin>
