--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,21 @@
 services:
-  frontend:
+  upgrade-app:
     build:
       context: .
-      dockerfile: ./frontend/dev.Dockerfile
-    image: upgrade-frontend:latest
-    user: "node"
-    environment:
-      - NODE_ENV=development
-    volumes:
-      - ./frontend:/usr/src/app/frontend
-    networks:
-      - localdev
-    ports:
-      - "4200:4200"
-  
-  backend:
-    build:
-      context: .
-      dockerfile: ./backend/dev.Dockerfile
-    image: upgrade-backend:latest
+      dockerfile: ./dev.Dockerfile
+    image: upgrade-app:latest
     user: "node"
     env_file:
       - ./backend/packages/Upgrade/.env.docker.local
     environment:
       - NODE_ENV=development
     volumes:
+      - ./frontend:/usr/src/app/frontend
       - ./backend:/usr/src/app/backend
     networks:
       - localdev
     ports:
+      - "4200:4200"
       - "3030:3030"
     depends_on:
       - "postgres"
