--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -41,11 +41,12 @@
         "@types/jest": "^29.5.10",
         "@types/multer": "^1.3.10",
         "@types/node": "^17.0.14",
-        "@types/node-fetch": "^2.6.3",
+        "@types/objects-to-csv": "^1.3.3",
         "@types/seedrandom": "^3.0.2",
         "@types/serve-favicon": "^2.2.31",
         "@types/swagger-jsdoc": "^3.0.2",
         "@types/swagger-ui-express": "^4.1.0",
+        "@types/uuid": "^9.0.7",
         "copyfiles": "^2.1.1",
         "coverage-badge-creator": "^1.0.11",
         "cross-env": "^6.0.3",
@@ -59,16 +60,19 @@
         "typeorm-seeding": "^1.2.0"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.470.0",
+        "@aws-sdk/client-ses": "^3.470.0",
+        "@aws-sdk/client-sfn": "^3.470.0",
+        "@aws-sdk/lib-storage": "^3.470.0",
+        "@aws-sdk/s3-request-presigner": "^3.470.0",
         "@golevelup/ts-jest": "^0.3.2",
         "@nestjs/common": "^8.4.0",
         "@nestjs/testing": "^8.4.0",
         "@nestjs/typeorm": "^8.0.3",
-        "@types/uuid": "^3.4.5",
-        "aws-sdk": "^2.639.0",
         "body-parser": "^1.20.1",
         "cache-manager": "^4.1.0",
         "chalk": "^2.4.2",
-        "class-transformer": "^0.3.1",
+        "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -76,7 +80,6 @@
         "dayjs": "^1.11.7",
         "dotenv": "^8.2.0",
         "express": "^4.18.2",
-        "express-request-id": "^1.4.1",
         "figlet": "^1.2.4",
         "google-auth-library": "^8.5.1",
         "helmet": "^3.21.2",
@@ -100,7 +103,7 @@
         "papaparse": "^5.4.1",
         "pg": "^8.3.0",
         "reflect-metadata": "^0.1.13",
-        "routing-controllers": "^0.9.0",
+        "routing-controllers": "^0.10.4",
         "rxjs": "^7.2.0",
         "seedrandom": "^3.0.5",
         "serve-favicon": "^2.5.0",
@@ -111,9 +114,9 @@
         "ts-jest": "^29.1.1",
         "typedi": "^0.8.0",
         "typeorm": "^0.2.20",
-        "typeorm-typedi-extensions": "^0.2.3",
+        "typeorm-typedi-extensions": "^0.4.1",
         "typescript": "^5.3.2",
-        "uuid": "^3.3.3",
+        "uuid": "^9.0.1",
         "winston": "^3.2.1",
         "winston-splunk-httplogger": "^3.1.0"
     },
