--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -33,39 +33,39 @@
         "@types/cache-manager": "^4.0.1",
         "@types/compression": "^1.0.1",
         "@types/cors": "^2.8.6",
-        "@types/dotenv": "^6.1.1",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "4.17.2",
         "@types/express-serve-static-core": "4.17.20",
         "@types/faker": "^4.1.8",
         "@types/helmet": "^0.0.44",
         "@types/jest": "^29.5.10",
-        "@types/multer": "^1.3.10",
+        "@types/multer": "^1.4.11",
         "@types/node": "^17.0.14",
         "@types/objects-to-csv": "^1.3.3",
         "@types/seedrandom": "^3.0.2",
         "@types/serve-favicon": "^2.2.31",
-        "@types/swagger-jsdoc": "^3.0.2",
+        "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.0",
         "@types/uuid": "^9.0.7",
         "copyfiles": "^2.1.1",
         "coverage-badge-creator": "^1.0.11",
-        "cross-env": "^6.0.3",
+        "cross-env": "^7.0.3",
         "faker": "^4.1.0",
         "ncp": "^2.0.0",
         "nps": "^5.9.8",
         "nps-utils": "^1.7.0",
         "ts-node": "^10.4.0",
-        "tsconfig-paths": "^3.12.0",
+        "tsconfig-paths": "^4.2.0",
         "tslib": "^2.3.1",
         "typeorm-seeding": "^1.2.0"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.470.0",
-        "@aws-sdk/client-ses": "^3.470.0",
-        "@aws-sdk/client-sfn": "^3.470.0",
-        "@aws-sdk/lib-storage": "^3.470.0",
-        "@aws-sdk/s3-request-presigner": "^3.470.0",
-        "@golevelup/ts-jest": "^0.3.2",
+        "@aws-sdk/client-s3": "^3.473.0",
+        "@aws-sdk/client-ses": "^3.473.0",
+        "@aws-sdk/client-sfn": "^3.473.0",
+        "@aws-sdk/lib-storage": "^3.473.0",
+        "@aws-sdk/s3-request-presigner": "^3.473.0",
+        "@golevelup/ts-jest": "^0.4.0",
         "@nestjs/common": "^8.4.0",
         "@nestjs/testing": "^8.4.0",
         "@nestjs/typeorm": "^8.0.3",
@@ -76,28 +76,28 @@
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
-        "csv-stringify": "^5.4.3",
+        "csv-stringify": "^6.4.5",
         "dayjs": "^1.11.7",
-        "dotenv": "^8.2.0",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "figlet": "^1.2.4",
-        "google-auth-library": "^8.5.1",
+        "google-auth-library": "^9.4.1",
         "helmet": "^3.21.2",
         "iso8601-duration": "^2.1.1",
         "jest": "^29.7.0",
-        "json-diff": "^0.5.4",
-        "jsonfile": "^5.0.0",
+        "json-diff": "^1.0.6",
+        "jsonfile": "^6.1.0",
         "jsonwebtoken": "^9.0.0",
         "lodash.flatten": "^4.4.0",
         "lodash.isequal": "^4.5.0",
         "microframework": "^0.6.4",
         "mocker-data-generator": "^2.8.0",
         "morgan": "^1.9.1",
-        "multer": "^1.4.2",
+        "multer": "^1.4.5-lts.1",
         "nestjs": "0.0.1",
-        "newrelic": "8.7.0",
-        "node-fetch": "^2.6.7",
-        "nodemon": "^2.0.20",
+        "newrelic": "^11.6.1",
+        "node-fetch": "^3.3.2",
+        "nodemon": "^3.0.2",
         "npm": "^8.5.1",
         "objects-to-csv": "^1.3.6",
         "papaparse": "^5.4.1",
@@ -109,8 +109,8 @@
         "serve-favicon": "^2.5.0",
         "sinon": "^14.0.0",
         "supertest": "^6.2.2",
-        "swagger-jsdoc": "^3.4.0",
-        "swagger-ui-express": "^4.5.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
         "ts-jest": "^29.1.1",
         "typedi": "^0.8.0",
         "typeorm": "^0.2.20",
