--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -35,6 +35,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "4.17.2",
         "@types/express-serve-static-core": "4.17.20",
+        "@types/figlet": "^1.5.8",
         "@types/helmet": "^0.0.44",
         "@types/jest": "^29.5.10",
         "@types/multer": "^1.4.11",
@@ -68,7 +69,7 @@
         "@nestjs/typeorm": "^8.0.3",
         "body-parser": "^1.20.1",
         "cache-manager": "^5.3.1",
-        "chalk": "^2.4.2",
+        "chalk": "^5.3.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
