jest-config, material, cdk updates

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,12 +36,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^15.2.8",
+    "@angular/cdk": "^16.0.0",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
-    "@angular/material": "^15.2.8",
+    "@angular/material": "^16.0.0",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
@@ -84,7 +84,7 @@
     "coverage-badge-creator": "^1.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "~11.1.1",
+    "jest-preset-angular": "^13.1.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
