--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -31,15 +31,14 @@
         "@types/body-parser": "^1.17.1",
         "@types/cache-manager": "^4.0.6",
         "@types/compression": "^1.0.1",
-        "@types/cors": "^2.8.6",
+        "@types/cors": "^2.8.17",
         "@types/dotenv": "^8.2.0",
-        "@types/express": "4.17.2",
-        "@types/express-serve-static-core": "4.17.20",
+        "@types/express": "^4.17.21",
+        "@types/express-serve-static-core": "^4.17.41",
         "@types/figlet": "^1.5.8",
-        "@types/helmet": "^0.0.44",
-        "@types/jest": "^29.5.10",
+        "@types/jest": "^29.5.11",
         "@types/multer": "^1.4.11",
-        "@types/node": "^17.0.14",
+        "@types/node": "^20.10.6",
         "@types/objects-to-csv": "^1.3.3",
         "@types/seedrandom": "^3.0.2",
         "@types/serve-favicon": "^2.2.31",
@@ -52,23 +51,24 @@
         "ncp": "^2.0.0",
         "nps": "^5.9.8",
         "nps-utils": "^1.7.0",
-        "ts-node": "^10.4.0",
+        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "tslib": "^2.3.1",
         "typeorm-seeding": "^1.2.0"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.470.0",
-        "@aws-sdk/client-ses": "^3.470.0",
-        "@aws-sdk/client-sfn": "^3.470.0",
-        "@aws-sdk/lib-storage": "^3.470.0",
-        "@aws-sdk/s3-request-presigner": "^3.470.0",
-        "@golevelup/ts-jest": "^0.3.2",
-        "@nestjs/common": "^8.4.0",
-        "@nestjs/testing": "^8.4.0",
-        "@nestjs/typeorm": "^8.0.3",
+        "@aws-sdk/client-s3": "^3.485.0",
+        "@aws-sdk/client-ses": "^3.485.0",
+        "@aws-sdk/client-sfn": "^3.485.0",
+        "@aws-sdk/lib-storage": "^3.485.0",
+        "@aws-sdk/s3-request-presigner": "^3.485.0",
+        "@golevelup/ts-jest": "^0.4.0",
+        "@nestjs/common": "^10.3.0",
+        "@nestjs/testing": "^10.3.0",
+        "@nestjs/typeorm": "^10.0.1",
+        "@types/supertest": "^6.0.2",
         "body-parser": "^1.20.1",
-        "cache-manager": "^5.3.1",
+        "cache-manager": "^5.3.2",
         "chalk": "^5.3.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
@@ -80,8 +80,8 @@
         "express": "^4.18.2",
         "figlet": "^1.2.4",
         "google-auth-library": "^9.4.1",
-        "helmet": "^3.21.2",
-        "iso8601-duration": "^2.1.1",
+        "helmet": "^7.1.0",
+        "iso8601-duration": "^2.1.2",
         "jest": "^29.7.0",
         "json-diff": "^1.0.6",
         "jsonfile": "^6.1.0",
@@ -92,10 +92,9 @@
         "morgan": "^1.9.1",
         "multer": "^1.4.5-lts.1",
         "nestjs": "0.0.1",
-        "newrelic": "^11.6.1",
+        "newrelic": "^11.8.0",
         "node-fetch": "^3.3.2",
         "nodemon": "^3.0.2",
-        "npm": "^8.5.1",
         "objects-to-csv": "^1.3.6",
         "papaparse": "^5.4.1",
         "pg": "^8.3.0",
@@ -112,7 +111,7 @@
         "typedi": "^0.8.0",
         "typeorm": "^0.2.20",
         "typeorm-typedi-extensions": "^0.4.1",
-        "typescript": "^5.3.2",
+        "typescript": "^5.3.3",
         "uuid": "^9.0.1",
         "winston": "^3.2.1",
         "winston-splunk-httplogger": "^3.1.0"
