--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -67,6 +67,7 @@
         "@nestjs/testing": "^10.3.0",
         "@nestjs/typeorm": "^10.0.1",
         "@types/supertest": "^6.0.2",
+        "axios": "^1.6.7",
         "body-parser": "^1.20.1",
         "cache-manager": "^5.3.2",
         "chalk": "^5.3.0",
@@ -93,7 +94,6 @@
         "multer": "^1.4.5-lts.1",
         "nestjs": "0.0.1",
         "newrelic": "^11.8.0",
-        "node-fetch": "^3.3.2",
         "nodemon": "^3.0.2",
         "objects-to-csv": "^1.3.6",
         "papaparse": "^5.4.1",
