--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,25 +35,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@danielmoncada/angular-datetime-picker": "^16.0.1",
-    "@ngrx/effects": "^16.0.0",
-    "@ngrx/entity": "^16.0.0",
-    "@ngrx/router-store": "^16.0.0",
-    "@ngrx/store": "^16.0.0",
-    "@ngrx/store-devtools": "^16.0.0",
+    "@angular/animations": "^17.1.2",
+    "@angular/cdk": "^17.1.2",
+    "@angular/common": "^17.1.2",
+    "@angular/compiler": "^17.1.2",
+    "@angular/core": "^17.1.2",
+    "@angular/forms": "^17.1.2",
+    "@angular/material": "^17.1.2",
+    "@angular/platform-browser": "^17.1.2",
+    "@angular/platform-browser-dynamic": "^17.1.2",
+    "@angular/router": "^17.1.2",
+    "@danielmoncada/angular-datetime-picker": "^17.0.0",
+    "@ngrx/effects": "^17.1.0",
+    "@ngrx/entity": "^17.1.0",
+    "@ngrx/router-store": "^17.1.0",
+    "@ngrx/store": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "@swimlane/ngx-charts": "^20.4.1",
+    "@swimlane/ngx-charts": "^20.5.0",
     "angular2-notifications": "^16.0.1",
     "ansi-to-html": "^0.7.2",
     "dayjs": "^1.11.2",
@@ -63,19 +63,30 @@
     "lodash.find": "^4.6.0",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
-    "ngx-skeleton-loader": "^8.1.0",
-    "rxjs": "7.8.0",
-    "tslib": "^2.0.0",
+    "ngx-skeleton-loader": "^9.0.0",
+    "rxjs": "7.8.1",
+    "tslib": "^2.6.2",
     "uuid": "^9.0.1",
-    "zone.js": "^0.13.3"
+    "zone.js": "^0.14.3"
+  },
+  "overrides": {
+    "@angular-material-components/datetime-picker": {
+      "@angular/platform-browser": ">=16.0.0",
+      "@angular/common": ">=16.0.0",
+      "@angular/core": ">=16.0.0",
+      "@angular/forms": ">=16.0.0",
+      "@angular/material": ">=16.0.0",
+      "@angular/cdk": ">=16.0.0"
+    }
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.11",
-    "@angular/cli": "^16.2.10",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/language-service": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.1.2",
+    "@angular/cli": "^17.1.2",
+    "@angular/compiler-cli": "^17.1.2",
+    "@angular/language-service": "^17.1.2",
     "@types/google.accounts": "^0.0.6",
-    "@types/jest": "^28.0.0",
+    "@types/jest": "^29.0.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/lodash.find": "^4.6.7",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^18.0.0",
@@ -90,7 +101,7 @@
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.8",
     "ts-node": "~10.8.0",
-    "typescript": "~4.9.5",
+    "typescript": "~5.3.3",
     "webpack-bundle-analyzer": "^4.6.1"
   }
 }
