--- a/k6/package.json
+++ b/k6/package.json
@@ -15,7 +15,8 @@
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "typescript": "4.2.4",
-    "webpack": "5.35.1",
+    "upgrade_client_lib": "^5.0.12",
+    "webpack": "^5.89.0",
     "webpack-cli": "4.6.0",
     "webpack-glob-entries": "^1.0.1"
   },
