added json editor code for metrics

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,9 +54,11 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@swimlane/ngx-charts": "^20.5.0",
+    "ang-jsoneditor": "^3.1.1",
     "angular2-notifications": "^16.0.1",
     "ansi-to-html": "^0.7.2",
     "dayjs": "^1.11.2",
+    "jsoneditor": "^9.10.2",
     "jszip": "^3.10.1",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
