rearrange playground component placement and naming

--- a/frontend/projects/component-playground/tsconfig.json
+++ b/frontend/projects/component-playground/tsconfig.json
@@ -22,7 +22,11 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "upgrade/*": ["../upgrade/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
