rearrange so that shared-components are in a dir that mirrors shared and is simpler to organize and import

--- a/frontend/projects/component-playground/tsconfig.json
+++ b/frontend/projects/component-playground/tsconfig.json
@@ -25,7 +25,8 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "upgrade/*": ["../upgrade/*"]
+      "@upgrade/*": ["../upgrade/*"],
+      "@shared-standalone-component-lib/*": ["../upgrade/src/app/shared-standalone-component-lib/*"]
     }
   },
   "angularCompilerOptions": {
