--- a/frontend/projects/component-playground/tsconfig.app.json
+++ b/frontend/projects/component-playground/tsconfig.app.json
@@ -3,7 +3,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "@upgrade/*": ["../upgrade/*"],
+      "@shared-standalone-component-lib/*": ["../upgrade/src/app/shared-standalone-component-lib/*"]
+    }
   },
   "files": [
     "src/main.ts"
