add google client id in env files

--- a/backend/packages/Upgrade/.env.docker.local
+++ b/backend/packages/Upgrade/.env.docker.local
@@ -64,7 +64,7 @@ MONITOR_PASSWORD=1234
 #
 # Google Client Id
 #
-GOOGLE_CLIENT_ID=google_project_id
+GOOGLE_CLIENT_ID=135765367152-pq4jhd3gra10jda9l6bpnmu9gqt48tup.apps.googleusercontent.com
 DOMAIN_NAME =
 SCHEDULER_STEP_FUNCTION=arn:aws:states:us-east-1:781188149671:stateMachine:development-upgrade-experiment-scheduler
 AWS_REGION=us-east-1
