--- a/backend/packages/Upgrade/src/config.json
+++ b/backend/packages/Upgrade/src/config.json
@@ -87,6 +87,10 @@
     {
       "email": "yagnik.patel@playpowerlabs.com",
       "role": "admin"
+    },
+    {
+      "email": "khanjan.dalwadi@playpowerlabs.com",
+      "role": "admin"
     }
   ],
   "context": [
