adding separate env variable for export replica and generic replicas

--- a/backend/packages/Upgrade/.env.example
+++ b/backend/packages/Upgrade/.env.example
@@ -22,6 +22,7 @@ LOG_OUTPUT=dev
 #
 TYPEORM_CONNECTION=postgres
 TYPEORM_HOST=localhost
+TYPEORM_HOSTNAME_EXPORT_REPLICA=[]
 TYPEORM_HOSTNAME_REPLICAS=[]
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
