--- a/backend/packages/Upgrade/.env.test
+++ b/backend/packages/Upgrade/.env.test
@@ -77,7 +77,7 @@ TOKEN_SECRET_KEY = <replaceme>
 #
 # Email
 #
-EMAIL_FROM                      = "Name@companyemail.com",
+EMAIL_FROM                      = "Name@companyemail.com"
 EMAIL_EXPIRE_AFTER_SECONDS      = 36000
 EMAIL_BUCKET                    = "upgrade-csv-upload"
 
