update load balancer healthcheck

--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -176,7 +176,7 @@ Resources:
       Name: !Sub ${appName}-${environment}-${cluster}
       HealthCheckEnabled: 'true'
       HealthCheckIntervalSeconds: 30
-      HealthCheckPath: /upgrade-service/
+      HealthCheckPath: /api/
       HealthCheckPort: traffic-port
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 5
@@ -202,11 +202,6 @@ Resources:
       Actions:
         - TargetGroupArn: !Ref ecsTargetGroup
           Type: forward
-      Conditions:
-        - Field: path-pattern
-          PathPatternConfig:
-            Values:
-              - /upgrade-service* 
       ListenerArn:
         Fn::ImportValue: !Sub ${sharedResourcesPrefix}-${environment}-albListenerArn-${cluster}
       Priority: 1
