updating project to build per env
added ability to replace environment file values at build time.
added replace-in-file package to repo
added additional qa and prod angular configurations (will remove production once verified builds work with this new config)
updated package.json with new build command to build per env

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint-staged": "^13.0.3",
     "nps": "^5.10.0",
     "nps-utils": "^1.7.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "replace-in-file": "^6.1.0"
   },
   "scripts": {
     "prepare": "is-ci || husky install",
