--- a/backend/packages/Upgrade/.env.docker.local
+++ b/backend/packages/Upgrade/.env.docker.local
@@ -64,7 +64,7 @@ MONITOR_PASSWORD=1234
 #
 # Google Client Id
 #
-GOOGLE_CLIENT_ID=google_project_id
+GOOGLE_CLIENT_ID=656936260684-hdsihcgcdrcbeom72n56o8n5rb2mtc58.apps.googleusercontent.com
 DOMAIN_NAME =
 AUTH_CHECK=false
 SCHEDULER_STEP_FUNCTION=arn:aws:states:us-east-1:781188149671:stateMachine:development-upgrade-experiment-scheduler
@@ -86,15 +86,15 @@ EMAIL_BUCKET                    = "upgrade-csv-upload"
 MOOCLETS_ENABLED = true
 MOOCLETS_HOST_URL = http://mooclet-api:8000
 MOOCLETS_API_ROUTE = /engine/api/v1
-MOOCLETS_API_TOKEN = 4eb4399f96541aa305ed246ae7a6728745694034
+MOOCLETS_API_TOKEN = 9d9b017c9bd3445bcd17f683d43d04f87eba93de
 
 #
 # Initialization
 #
-ADMIN_USERS = mglover@carnegielearning.com:admin/\sritter@carnegielearning.com:admin/\sfancsali@carnegielearning.com:admin/\nirmal@playpowerlabs.com:admin/\vivek@playpowerlabs.com:admin/\mmchenry@carnegielearning.com:admin/\apople@carnegielearning.com:admin/\leslie@carnegielearning.com:admin/\sgrieco@carnegielearning.com:admin/\lseaman@carnegielearning.com:admin/\kschaefer@carnegielearning.com:admin/\abright@carnegielearning.com:admin/\amurphy@carnegielearning.com:admin/\derek@playpowerlabs.com:admin/\jaydip.hirapara@playpowerlabs.com:admin/\pratik.prajapati@playpowerlabs.com:admin/\dev@playpowerlabs.com:admin/\dhrushit@playpowerlabs.com:admin/\ridham.shah@playpowerlabs.com:admin/\zlee@carnegielearning.com:admin/\kweldon@carnegielearning.com:admin
+ADMIN_USERS = doswalt@carnegielearning.com:admin
 CLIENT_API_SECRET = secret
 CLIENT_API_KEY = key
 
 CONTEXT_METADATA = {"mathstream":{"CONDITIONS":["question-hint-default","question-hint-tutorbot"],"GROUP_TYPES":["schoolId","classId","instructorId"],"EXP_IDS":["question-hint"],"EXP_POINTS":["lesson-stream"]},"mathia-student-ui":{"CONDITIONS":["control","feature"],"GROUP_TYPES":["schoolId","classId","instructorId"],"EXP_IDS":["focusTool"],"EXP_POINTS":["uiManager"]},"livehint-ai":{"CONDITIONS":["tutorbot-enabled1","tutorbot-enabled2", "tutorbot-model-a", "tutorbot-model-b"],"GROUP_TYPES":["schoolId","classId"],"EXP_IDS":["tutorbot", "choose-ai-model"],"EXP_POINTS":["problem-info"]},"assign-prog":{"CONDITIONS":["control","variant","default","utility_value","fitted_skill_params","ddi_skill_params","test_m_var4_name_no_atts","test_m_var7_tools_layout","test_nm_var2_disp","test_nm_var4_layout"],"GROUP_TYPES":["schoolId","classId","instructorId"],"EXP_IDS":["absolute_value_plot_equality","analyzing_step_functions","equivalent_ratios_rates_solving_table","graph_setup_linear_equation-1"],"EXP_POINTS":["SelectSection"]}}
 
-METRICS = [{"metric": "totalTimeSeconds","datatype": "continuous"}, { "groupClass": "masteryWorkspace", "allowedKeys": [ "calculating_area_various_figures", "Compare_functions_diff_reps_quadratic" ], "attributes": [{ "metric": "timeSeconds", "datatype": "continuous"}]}]
+METRICS = []
