add taskRoleArn import

--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -233,6 +233,9 @@ Resources:
             TransitEncryption: ENABLED
             FilesystemId:
               Fn::ImportValue: !Sub ${sharedEcsResourcesPrefix}-${environment}-fluentdConfigFilesystemId
+      TaskRoleArn: 
+        Fn::ImportValue: 
+          !Sub sharedResourcesPrefix-${environment}-taskRoleArn
   ecsService:
     Type: AWS::ECS::Service
     DependsOn: alblistenerrule
