fix taskRole import

--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -235,7 +235,7 @@ Resources:
               Fn::ImportValue: !Sub ${sharedEcsResourcesPrefix}-${environment}-fluentdConfigFilesystemId
       TaskRoleArn: 
         Fn::ImportValue: 
-          !Sub sharedResourcesPrefix-${environment}-taskRoleArn
+          !Sub ${sharedResourcesPrefix}-${environment}-taskRoleArn
   ecsService:
     Type: AWS::ECS::Service
     DependsOn: alblistenerrule
